# HomeworksITStep

./: CMakeLists.txt  main.cpp
AnimalWorld/animals/: Bison.cpp  Lion.cpp  Wildebeest.cpp  Wolf.cpp
AnimalWorld/animals/headers/: Bison.h  Carnivore.h  Herbivore.h  Lion.h  (+4 more)
AnimalWorld/client/: Client.cpp  Client.h
AnimalWorld/continents/: Africa.cpp  Continent.cpp  NorthAmerica.cpp
Array/: Array.cpp  Array.h
Array/interfaces/: IMath.h  IOutput.h  ISort.h
Array/test/: arrayTest.cpp  arrayTest.h
Autosalon/headers/: Car.h  UserInterface.h
Autosalon/src/: Car.cpp  UserInterface.cpp
Autosalon/test/: autosalonTest.cpp  autosalonTest.h
Calculator/: ArrayValueCalculator.cpp  ArrayValueCalculator.h
Calculator/exceptions/: ArrayDataException.h  ArraySizeException.h
Calculator/test/: calcTest.cpp  calcTest.h
Exercises/: exercises.cpp  exercises.h
Laptop/: Laptop.cpp  Laptop.h
Laptop/External Ports/: ExternalPorts.cpp  Power.cpp  SDReader.cpp  USB.cpp
Laptop/Integrated Peripherals/: Battery.cpp  IntegratedPeripherals.cpp  Keyboard.cpp  Screen.cpp  Touchpad.cpp
Laptop/Motherboard/: GPU.cpp  Motherboard.cpp  NonVolatileMemory.cpp  Processor.cpp  SoundChip.cpp  UEFI.cpp  VolatileMemory.cpp
Laptop/Tests/: laptopTest.cpp  laptopTest.h
Pet/: AbstractPet.cpp  Cat.cpp  Dog.cpp  Parrot.cpp
Pet/headers/: AbstractPet.h  Cat.h  Dog.h  Parrot.h
Pet/test/: petTest.cpp  petTest.h
Validator/: Validator.cpp  Validator.h
Validator/exceptions/: FileNotFoundException.h  InvalidSyntaxException.h
Validator/test/: file.html  validatorTest.cpp  validatorTest.h
(+24 files in other folders)
